<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="36dp">

    <Button
        android:id="@+id/button_receive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receive_message" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/connected_device" />

        <TextView
            android:id="@+id/text_connected_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/none" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/label_received_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/received_message"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/label_received_message">

        <TextView
            android:id="@+id/text_received_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            tools:text="HELLO WORLD" />
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>